--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
 title: Code for Münster
 email: muenster@codefor.de
-description: > # this means to ignore newlines until "baseurl:"
-  Jede Woche treffen sich in ganz Deutschland "Code for Germany" Teams, die gemeinsam an nützlichen Anwendungen und Visualisierungen rund um offene Daten und digitale Werkzeuge für Bürgerinnen arbeiten.
-  Lokale Gruppen, bestehend aus Programmiererinnen, Designern und Open Data Interessierten, erproben, wie Code und Software dabei helfen können ihre Stadt und Nachbarschaft zu verbessern.
-  Auch in Münster besteht seit einem Jahr eine Gruppe aus interessierten Nutzern, die sich "Code for Münster" nennt.
+description: "Jede Woche treffen sich in ganz Deutschland 'Code for Germany' Teams, die gemeinsam an nützlichen Anwendungen und Visualisierungen rund um offene Daten und digitale Werkzeuge für Bürgerinnen arbeiten. Lokale Gruppen, bestehend aus Programmiererinnen, Designern und Open Data Interessierten, erproben, wie Code und Software dabei helfen können ihre Stadt und Nachbarschaft zu verbessern. Auch in Münster besteht seit einem Jahr eine Gruppe aus interessierten Nutzern, die sich 'Code for Münster' nennt."
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "codeformuenster.org" # the base hostname & protocol for your site
+
+language: de-de
 
 # Build settings
 markdown: kramdown
